# BiomechPythonAI_Guide

./: README.md
c3d_appendix_pack/c3d_appendix_pack/: README.md  c3d_tools.py  requirements.txt
c3d_appendix_pack/c3d_appendix_pack/appendix/: APPENDIX_C3D.md
c3d_appendix_pack/c3d_appendix_pack/diagrams/: c3d_flow.mmd  c3d_mindmap.mmd
notebooks/: Biomech_Report_Template.ipynb  C3D_quick_extractor_for_Colab_Markers_Analogs_Events_Metadata.ipynb  Chapter 05 ExportReport.ipynb  Chapter01_Input_Load_C3D_TRC_CSV.ipynb  Chapter02_Parse_WORKING.ipynb  Chapter03_Analyze_WORKING.ipynb  Chapter04_Visualize_WORKING.ipynb  Chapter05_Report_Colab.ipynb  Chapter05_Report_EXPANDED.ipynb  Chapter05_Report_WORKING.ipynb  Chapter06_ML_Intro.ipynb  Chapter1Input.py  Chapter2Input.py  Chapter3_Biomech_Notebook.ipynb  Chapter_02_Parse_final.ipynb  Chapter_5_Bridge.ipynb  Extract_all_C3D_metadata_Chap3.ipynb  JumpForce_Widget.ipynb  PoseIQ_Chapter0_C3D_ColabNotebook_UPDATED.ipynb  PoseIQ_Chapter0_C3D_ColabNotebook_WITH_COLAB_LINK (1).ipynb  PoseIQ_Chapter0_C3D_ColabNotebook_WITH_COLAB_LINK.ipynb  PoseIQ_MOX_Chapter0_Colab.ipynb  Quick_C3D_Data_Check.ipynb  Step00_Forces_Moments.ipynb  c3dParameters_Teaching_Notebook.ipynb  ch4_c3d_form_quickplots.ipynb  ch4_c3d_plotting.ipynb  chapter6_neuromsk.ipynb  extract_all_c3d_metadata.py  mocap_c3d_trc_csv_loading_tutorial_v2.ipynb
tools/: README.md  pyproject.toml
tools/setup/: README.md  pyproject.toml
tools/setup/biomech_setup/: __init__.py  chapters.py  cli.py  pyproject.toml
(+1 files in other folders)
