[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biomech-setup"
version = "0.1.0"
description = "Helper CLI to fetch and run chapter prep scripts"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas",
  "ezc3d",
]

[project.scripts]
biomech-setup = "biomech_setup.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["biomech_setup*"]
